@@ -24,9 +24,9 @@ foreach($schedules as $sched)
 {
 ?>
 <tr id="row<?php echo $sched->id?>">
-	<td align="center"><?php echo $sched->code . $sched->flightnum; ?> (L<?-$sched->leg?>)</td>
-	<td align="center"><?php echo $sched->depicao; ?> (<?php echo $sched->deptime;?>)</td>
-	<td align="center"><?php echo $sched->arricao; ?> (<?php echo $sched->arrtime;?>)</td>
+	<td align="left"><?php echo $sched->code . $sched->flightnum; ?> (Leg <?php echo$sched->leg?>)</td>
+	<td align="left"><?php echo $sched->depicao; ?> (<?php echo $sched->deptime;?>)</td>
+	<td align="left"><?php echo $sched->arricao; ?> (<?php echo $sched->arrtime;?>)</td>
 	<td align="center"><?php echo $sched->aircraft; ?></td>
 	<td align="center"><?php echo $sched->distance; ?></td>
 	<td align="center"><?php echo $sched->timesflown; ?></td>
